test/cherry/Language/for_scope_error.cherry
# RUN: not cherry-driver -typecheck %s 2>&1 | FileCheck %s

fn main(): UInt64 {
  for i in 0 .. 3 {
  }

  i
}

# CHECK: error: undefined variable
